k8s-manifests/overlays/staging/superapp/client/auth/patch/route-patch.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: member-auth-route
spec:
  path: /api/v1/cbesuperapp/member_auth
  to:
    name: member-auth-qa
    weight: 100
    kind: Service
  host: qaapisuperapp.cbe.com.et
  port:
    targetPort: 8080
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: member-user-route
spec:
  path: /api/v1/cbesuperapp/member_user
  to:
    name: member-user-qa
    weight: 100
    kind: Service
  host: qaapisuperapp.cbe.com.et
  port:
    targetPort: 8080
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: fayda-route
spec:
  path: /api/v1/cbesuperapp/fayda
  to:
    name: fayda-qa
    weight: 100
    kind: Service
  host: qaapisuperapp.cbe.com.et
  port:
    targetPort: 8080
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: migration-route
spec:
  path: /api/v1/cbesuperapp/migration
  to:
    name: migration-qa
    weight: 100
    kind: Service
  host: qaapisuperapp.cbe.com.et
  port:
    targetPort: 8080


---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ussd-auth-route
spec:
  path: /api/v1/cbesuperapp/ussd_auth
  to:
    name: ussd-auth-qa
    weight: 100
    kind: Service
  host: qaapisuperapp.cbe.com.et
  port:
    targetPort: 8080
